Transformation of request/response payloads for SDC Integration for POST /serviceSpecification Swagger changes and model classes Issue-ID: EXTAPI-487
