# docs/offeredapis/api_serviceCatalog/swagger.yaml
@@ -146,7 +146,7 @@ paths:
         "201":
           description: "Created"
           schema:
-            $ref: "#/definitions/ServiceSpecificationRequest"
+            $ref: "#/definitions/ServiceSpecificationResponse"
         "400":
           description: "Bad Request\n\nList of supported error codes:\n- 20: Invalid\
             \ URL parameter value\n- 21: Missing body\n- 22: Invalid body\n- 23: Missing\
@@ -485,12 +485,90 @@ definitions:
       \ be instantiated. By sharing the same specification, these services would therefore\
       \ share the same set of characteristics."
     type: "object"
+    required:
+      - name
+      - description
+      - category
+      - relatedParty
     properties:
       name:
         description: "Name of the service specification"
         type: "string"
       description:
         description: "A narrative that explains in detail what the service specification"
+        type: "string"
+      '@type':
+        description: "This attribute allows to dynamically extends TMF class. Valued\
+          \ with 'ONAPservice'. We use this feature to add following attributes:\n\
+          toscaModelURL\ntoscaResourceName\ncategory (1)\nsubcategory\
+          \ (1)\ndistributionStatus"
+        type: "string"
+        default: "ONAPservice"
+      '@schemaLocation':
+        description: "Not used"
+        type: "string"
+      '@baseType':
+        description: "Not used"
+        type: "string"
+      toscaModelURL:
+        description: "Additional attribute (not in the TMF API) - extended through\
+          \ @type - toscaModelURL"
+        type: "string"
+      toscaResourceName:
+        description: "Additional attribute (not in the TMF API) - extended through\
+          \ @type - toscaResourceName"
+        type: "string"
+      category:
+        description: "Additional attribute - extended through @type - category\nPlease\
+          \ note that this attribute is managed in TMF - in future release we'll introduce\
+          \ category resource"
+        type: "string"
+      subcategory:
+        description: "Additional attribute - extended through @type - category\nPlease\
+          \ note that this attribute is managed in TMF - in future release we'll introduce\
+          \ category resource"
+        type: "string"
+      version:
+        description: "Service specification version"
+        type: "string"
+      lifecycleStatus:
+        $ref: "#/definitions/LifecycleStatusValues"
+      targetServiceSchema:
+        $ref: "#/definitions/TargetServiceSchemaRef"
+      attachment:
+        type: "array"
+        items:
+          $ref: "#/definitions/Attachment"
+      relatedParty:
+        type: "array"
+        items:
+          $ref: "#/definitions/RelatedPartyRef"
+      resourceSpecification:
+        type: "array"
+        items:
+          $ref: "#/definitions/ResourceSpecificationRef"
+      serviceSpecCharacteristic:
+        type: "array"
+        items:
+          $ref: "#/definitions/ServiceSpecCharacteristicRequest"
+  ServiceSpecificationResponse:
+    description: "ServiceSpecification is a class that offers characteristics to describe\
+      \ a type of service. Functionally, it acts as a template by which Services may\
+      \ be instantiated. By sharing the same specification, these services would therefore\
+      \ share the same set of characteristics."
+    type: "object"
+    properties:
+      name:
+        description: "Name of the service specification"
+        type: "string"
+      id:
+        description: "id of the created service specification"
+        type: "string"
+      href:
+        description: "reference to the created service specification"
+        type: "string"
+      description:
+        description: ""
         type: "string"
       '@type':
         description: "This attribute allows to dynamically extends TMF class. Valued\
